--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,26 @@
-# Prerequisites
-*.d
+#include <stdio.h> // Programda kullandıgımız fonksiyonların işlemsi için kütüphane ekleriz
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+int main(void){
+  printf("\n\n\n\n                       **** HOŞGELDİNİZ ****\n\n"); //Giriş mesajını yapıyoruz  ( \n yazmamızın nedeni ise bir alt satıra yazdır yada geç anlamındadır ).
 
-# Linker output
-*.ilk
-*.map
-*.exp
+  printf("\n**** ÖĞRENCİ BİLGİLERİ ****\n\n"
+    "AD: MUHAMMET HÜSEYİN\n"
+    "SOYADI: ÖZDEMİR\n"
+    "OKUL NO : 200706014\n"
+    "OKULU: KKÜ\n"
+    "BÖLÜMÜ: ELEKTRONİK TEKNOLOJİSİ\n"
+    "YAŞADIGI ŞEHİR: ANKARA\n"
+    "YAŞI: 19\n"
+    "DOĞGUM TARİHİ: 30/07/2001\n"); // ögrenci bilgilerimizi ekran yazdırdık 
 
-# Precompiled Headers
-*.gch
-*.pch
+  printf("\n                  DEVAM ETMEK İÇİN ENTER tuşuna basınız: "); //getchar kullana bilmek için bir uyarı mesajı yazdırdık ekrana.
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+ getchar(); // getchar komutunu kullandık (getchar() fonksiyonunu kullanarak klavyeden karakter girmemiz gerekirken, karakter girmek yerine ENTER tuşuna basarsak, getchar() fonksiyonu \n karakterini geri verir).
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+  printf("\nMerhabalar ben muhammet hüseyin özdemir\n" 
+         "bu dersimizin adı C programlama \n"
+         "bu kodlamada ise hocamızın dedigi şekilde kodlarımızı yazdık\n"
+         "Final ödevi" );// getchar komutunu kullandıktan sonra hocamızın dedigi gibi ekran nitelik yazdırdık
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+  return 0; //bu kısmı yazmamızın nedeni ise sisteme programın bittigini anlatmak için yazılır.
+}
